# legislation-scraper

./: .gitignore  main.sh  pybuild.sh  requirements.txt  setup.cfg
legislation_scraper/nebraska/: urls.py
legislation_scraper/nebraska/classes/: Client.py  Scraper.py
legislation_scraper/nebraska/scripts/: 1_get_session_dates.py  2_get_bill_summaries_per_session_date.py  3_split_out_bill_summaries.py  4_get_bill_details.py  5_collect_data_into_one_file.py  helper.py  scrape.py
