
[metadata]
name = legislation-scraper
version = 0.0.1
author = Contributor
author_email = barobba@gmail.com
description = ...
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = legislation_scraper
packages = find:
python_requires = >=3.9

[options.packages.find]
where = legislation_scraper
